feat: make blocklist table a component, calculate average points with and without skips

--- a/src/app/components/block-list-table/block-list-table.component.css
+++ b/src/app/components/block-list-table/block-list-table.component.css
@@ -16,3 +16,15 @@ td, th {
     justify-content: center;
     width: 120px;
 }
+
+.bottom-card-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    width: 75%;
+}
+
+.bottom-card {
+    justify-content: center;
+    margin: 10px;
+}
