--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -1,3 +1,23 @@
+<mat-card appearance="outlined" class="bottom-card-container">
+    <mat-card appearance="outlined" class="bottom-card">
+        <mat-card-content>
+            Average points per task (skips) - {{averagePointsSkip}}
+        </mat-card-content>
+    </mat-card>
+    <mat-card appearance="outlined" class="bottom-card">
+        <mat-card-content>
+            Average points per task (no skips) - {{averagePoints}}
+        </mat-card-content>
+    </mat-card>
+    <mat-card appearance="outlined" class="bottom-card">
+        <mat-card-content>
+            % of tasks skipped - {{percentageSkipped}}%
+        </mat-card-content>
+    </mat-card>
+</mat-card>
+
+<mat-divider></mat-divider>
+
 <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Demon" #input>
@@ -14,7 +34,9 @@
         <!-- Progress Column -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-            <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+            <td mat-cell *matCellDef="let row">
+                {{row.status}} 
+            </td>
         </ng-container>
 
         <!-- Name Column -->
@@ -40,8 +62,13 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
             <td mat-cell *matCellDef="let row">
                 <div class="example-button-container">
-                    <button mat-fab (click)="onBlock(row.id)">
-                      <mat-icon>delete</mat-icon>
+                    <button mat-mini-fab (click)="onBlockTask(row.id)">
+                        <mat-icon>block</mat-icon>
+                    </button>
+                </div>
+                <div class="example-button-container">
+                    <button mat-mini-fab (click)="onSkipTask(row.id)">
+                        <mat-icon>cancel</mat-icon>
                     </button>
                 </div>
             </td>
@@ -55,6 +82,9 @@
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
         </tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+
+    <mat-divider></mat-divider>
+
+    
 </div>
   
