--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,3 +1,3 @@
-<ul>
-    <li><a routerLink='/blocklist'>block list</a></li>
-</ul>
+<a routerLink='/blocklist'>block list</a>
+<br>
+<a routerLink="/table">table</a>
