--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -61,13 +61,11 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
             <td mat-cell *matCellDef="let row">
-                <div class="example-button-container">
-                    <button mat-mini-fab (click)="onBlockTask(row.id)">
+                <div class="icon-button-container">
+                    <button mat-mini-fab (click)="onBlockTask(row.id)" class="icon-button">
                         <mat-icon>block</mat-icon>
                     </button>
-                </div>
-                <div class="example-button-container">
-                    <button mat-mini-fab (click)="onSkipTask(row.id)">
+                    <button mat-mini-fab (click)="onSkipTask(row.id)" class="icon-button">
                         <mat-icon>cancel</mat-icon>
                     </button>
                 </div>
