refactor: move task list out of component & determine total weight from taskData

--- a/src/app/views/block-list/block-list.component.html
+++ b/src/app/views/block-list/block-list.component.html
@@ -1,2 +1,3 @@
 <p>block-list works!</p>
-<app-block-list-table [totalWeight]="currentWeight" [averagePoints]="currentPoints"></app-block-list-table>
+<br>
+<app-block-list-table [Tasks]="DuradelTasks" [averagePoints]="currentPoints"></app-block-list-table>
