--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -59,7 +59,7 @@
 
         <!-- actions Column -->
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+            <th mat-header-cell *matHeaderCellDef> </th>
             <td mat-cell *matCellDef="let row">
                 <div class="icon-button-container">
                     <button mat-mini-fab (click)="onBlockTask(row.id)" class="icon-button">
