--- a/src/app/views/block-list/block-list.component.html
+++ b/src/app/views/block-list/block-list.component.html
@@ -1,3 +1,9 @@
-<p>block-list works!</p>
-<br>
-<app-block-list-table [Tasks]="DuradelTasks" [averagePoints]="currentPoints"></app-block-list-table>
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" animationDuration="0ms">
+	<mat-tab label="Konar">
+		<app-block-list-table [Tasks]="KonarTasks" [averagePoints]="KonarPoints"></app-block-list-table>
+	</mat-tab>
+	<!-- <mat-tab label="Nieve">Nieve</mat-tab> -->
+	<mat-tab label="Duradel">
+		<app-block-list-table [Tasks]="DuradelTasks" [averagePoints]="DuradelPoints"></app-block-list-table>
+	</mat-tab>
+</mat-tab-group>
