feat: add tooltip to average points

--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -1,6 +1,6 @@
 <mat-card appearance="outlined" class="bottom-card-container">
     <mat-card appearance="outlined" class="bottom-card">
-        <mat-card-content>
+        <mat-card-content matTooltip="Note that this calculation considers the average points over extended periods of time and includes bonus points up to 1,000 tasks.">
             Average points per task (skips) - {{averagePointsSkip}}
         </mat-card-content>
     </mat-card>
