fix: konar section was commented

--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -16,6 +16,8 @@
     </mat-card>
 </mat-card>
 
+<!-- ask for slayer lvl and quests here -->
+
 <mat-divider></mat-divider>
 
 <mat-form-field>
@@ -83,6 +85,4 @@
 
     <mat-divider></mat-divider>
 
-    
 </div>
-  
