--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -83,7 +83,7 @@
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
             <td mat-cell *matCellDef="let row">
-                <mat-button-toggle-group [formControl]="row.statusControl" (change)="onChangeStatus(row, $event)">
+                <mat-button-toggle-group [formControl]="row.statusControl" (change)="onChangeStatus(row)"> <!--onChangeStatus(row, $event) -->
                     <mat-button-toggle value="Active">Active</mat-button-toggle>
                     <mat-button-toggle value="Blocked">Blocked</mat-button-toggle>
                     <mat-button-toggle value="Locked">Locked</mat-button-toggle>
