refactor: change calculation for average points to include up to 100 tasks only

--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -1,6 +1,6 @@
 <mat-card appearance="outlined" class="bottom-card-container">
     <mat-card appearance="outlined" class="bottom-card">
-        <mat-card-content matTooltip="Note that this calculation considers the average points over extended periods of time and includes bonus points up to 1,000 tasks.">
+        <mat-card-content matTooltip="This calculation averages points over time, including bonuses for up to 100 tasks and Konar swaps at every 50th and 100th task without the elite diary.">
             Average points per task (skips) - {{averagePointsSkip}}
         </mat-card-content>
     </mat-card>
