feat: add Nieve/Steve and Chaeldar data

--- a/src/app/views/block-list/block-list.component.html
+++ b/src/app/views/block-list/block-list.component.html
@@ -5,4 +5,10 @@
 	<mat-tab label="Konar">
 		<app-block-list-table [Tasks]="KonarTasks" [averagePoints]="KonarPoints"></app-block-list-table>
 	</mat-tab>
+	<mat-tab label="Nieve/Steve">
+		<app-block-list-table [Tasks]="NieveTasks" [averagePoints]="NievePoints"></app-block-list-table>
+	</mat-tab>
+	<mat-tab label="Chaeldar">
+		<app-block-list-table [Tasks]="ChaeldarTasks" [averagePoints]="ChaeldarPoints"></app-block-list-table>
+	</mat-tab>
 </mat-tab-group>
