--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -1,124 +1,122 @@
-<mat-card appearance="outlined" class="bottom-card-container">
-    <mat-card appearance="outlined" class="bottom-card">
-        <mat-card-content matTooltip="This calculation averages points over time, including bonuses for up to 100 tasks and Konar swaps at every 50th and 100th task without the elite diary.">
-            Average points per task (skips) - {{averagePointsSkip}}
-        </mat-card-content>
+<div style="display: flex; margin-top: 20px;">
+    <!-- Points display section -->
+    <mat-card appearance="outlined" class="card-container">
+        <mat-card appearance="outlined" class="inner-card">
+            <mat-card-content matTooltip="This calculation averages points over time, including bonuses for up to 100 tasks and Konar swaps at every 50th and 100th task without the elite diary.">
+                Average points per task (skips) - {{averagePointsSkip}}
+            </mat-card-content>
+        </mat-card>
+        <mat-card appearance="outlined" class="inner-card">
+            <mat-card-content>
+                Average points per task (no skips) - {{averagePoints}}
+            </mat-card-content>
+        </mat-card>
+        <mat-card appearance="outlined" class="inner-card">
+            <mat-card-content>
+                % of tasks skipped - {{percentageSkipped}}%
+            </mat-card-content>
+        </mat-card>
     </mat-card>
-    <mat-card appearance="outlined" class="bottom-card">
+
+    <!-- Slayer and combat lvl add quests here also -->
+    <mat-card appearance="outlined" class="card-container" [formGroup]="reqsForm">
         <mat-card-content>
-            Average points per task (no skips) - {{averagePoints}}
+            <mat-card appearance="outlined" class="reqs inner-card">
+                <mat-card-content>
+                    <div class="label-container">
+                        <label>Slayer Level</label>
+                        <label>{{slayerLvlSlider.value}}</label>
+                    </div>
+                    <mat-slider
+                        margin="8px"
+                        max="99"
+                        min="1"
+                        step="1"
+                        discrete="false"
+                        showTickMarks="false"
+                        (mouseup)="onSetSlayerLvl(slayerLvlSlider.value)"
+                        >
+                    <input matSliderThumb formControlName="slayerLvl" #slayerLvlSlider>
+                    </mat-slider>
+                </mat-card-content>
+            </mat-card>
+            <mat-card appearance="outlined" class="reqs inner-card">
+                <mat-card-content>
+                    <div class="label-container">
+                        <label>Combat Level</label>
+                        <label>{{combatLvlSlider.value}}</label>
+                    </div>
+                    <mat-slider
+                        margin="8px"
+                        max="126"
+                        min="3"
+                        step="1"
+                        discrete="false"
+                        showTickMarks="false"
+                        (mouseup)="onSetCombatLvl(combatLvlSlider.value)"
+                        >
+                    <input matSliderThumb formControlName="combatLvl" #combatLvlSlider>
+                    </mat-slider>
+                </mat-card-content>
+            </mat-card>
         </mat-card-content>
     </mat-card>
-    <mat-card appearance="outlined" class="bottom-card">
-        <mat-card-content>
-            % of tasks skipped - {{percentageSkipped}}%
-        </mat-card-content>
-    </mat-card>
-</mat-card>
+</div>
 
-<!-- ask for slayer lvl and quests here -->
-<mat-card class="example-result-card" [formGroup]="reqsForm">
-	<mat-card-content>
-		<mat-card class="reqs-inner-card">
-			<mat-card-content>
-				<h2>Result</h2>
-		
-				<div class="example-label-container">
-					<label id="example-name-label" class="example-name-label">Slayer Level</label>
-					<label class="example-value-label">{{slayerLvlSlider.value}}</label>
-				</div>
-				<mat-slider
-					class="example-margin"
-					max="99"
-					min="1"
-					step="1"
-					discrete="false"
-					showTickMarks="false"
-					(mouseup)="onSetSlayerLvl(slayerLvlSlider.value)"
-					>
-				<input matSliderThumb formControlName="slayerLvl" #slayerLvlSlider>
-				</mat-slider>
-			</mat-card-content>
-		</mat-card>
-		<mat-card class="reqs-inner-card">
-			<mat-card-content>
-				<h2>Result</h2>
-		
-				<div class="example-label-container">
-					<label id="example-name-label" class="example-name-label">Combat Level</label>
-					<label class="example-value-label">{{combatLvlSlider.value}}</label>
-				</div>
-				<mat-slider
-					class="example-margin"
-					max="126"
-					min="3"
-					step="1"
-					discrete="false"
-					showTickMarks="false"
-					(mouseup)="onSetCombatLvl(combatLvlSlider.value)"
-					>
-				<input matSliderThumb formControlName="combatLvl" #combatLvlSlider>
-				</mat-slider>
-			</mat-card-content>
-		</mat-card>
-	</mat-card-content>
-</mat-card>
-
-<mat-divider></mat-divider>
-
-<mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Demon" #input>
-</mat-form-field>
-  
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-        <!-- ID Column -->
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-        </ng-container>
-
-        <!-- Progress Column -->
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-            <td mat-cell *matCellDef="let row">
-                <mat-button-toggle-group [formControl]="row.statusControl" (change)="onChangeStatus(row)"> <!--onChangeStatus(row, $event) -->
-                    <mat-button-toggle value="Active">Active</mat-button-toggle>
-                    <mat-button-toggle value="Blocked">Blocked</mat-button-toggle>
-                    <mat-button-toggle value="Locked">Locked</mat-button-toggle>
-                    <mat-button-toggle value="Skip">Skip</mat-button-toggle>
-                </mat-button-toggle-group>
-            </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-        </ng-container>
-
-        <!-- Fruit Column -->
-        <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Weighting </th>
-            <td mat-cell *matCellDef="let row"> {{row.weight}} </td>
-        </ng-container>
-
-        <!-- chance Column -->
-        <ng-container matColumnDef="chance">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Chance of assignment </th>
-            <td mat-cell *matCellDef="let row"> {{row.chance}} % </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-        </tr>
-    </table>
-
-    <mat-divider></mat-divider>
-
+<div class="table-container">
+    <!-- Filter field -->
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Demon" #input>
+    </mat-form-field>
+    
+    <!-- Actual Table -->
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+            <!-- ID Column -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            </ng-container>
+    
+            <!-- Progress Column -->
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                <td mat-cell *matCellDef="let row">
+                    <mat-button-toggle-group [formControl]="row.statusControl" (change)="onChangeStatus(row)"> <!--onChangeStatus(row, $event) -->
+                        <mat-button-toggle value="Active">Active</mat-button-toggle>
+                        <mat-button-toggle value="Blocked">Blocked</mat-button-toggle>
+                        <mat-button-toggle value="Locked">Locked</mat-button-toggle>
+                        <mat-button-toggle value="Skip">Skip</mat-button-toggle>
+                    </mat-button-toggle-group>
+                </td>
+            </ng-container>
+    
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+            </ng-container>
+    
+            <!-- Fruit Column -->
+            <ng-container matColumnDef="weight">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Weighting </th>
+                <td mat-cell *matCellDef="let row"> {{row.weight}} </td>
+            </ng-container>
+    
+            <!-- chance Column -->
+            <ng-container matColumnDef="chance">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Chance of assignment </th>
+                <td mat-cell *matCellDef="let row"> {{row.chance}} % </td>
+            </ng-container>
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
+    </div>
 </div>
