--- a/src/app/views/block-list/block-list.component.html
+++ b/src/app/views/block-list/block-list.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" animationDuration="0ms">
 	<mat-tab label="Duradel">
 		<app-block-list-table [Tasks]="DuradelTasks" [averagePoints]="DuradelPoints"></app-block-list-table>
