fix: page title

--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -2,7 +2,7 @@
     <!-- Points display section -->
     <mat-card appearance="outlined" class="card-container">
         <mat-card appearance="outlined" class="inner-card">
-            <mat-card-content matTooltip="This calculation averages points over time, including bonuses for up to 100 tasks and Konar swaps at every 50th and 100th task without the elite diary.">
+            <mat-card-content>
                 Average points per task (skips) - {{averagePointsSkip}}
             </mat-card-content>
         </mat-card>
