--- a/src/app/components/block-list-table/block-list-table.component.css
+++ b/src/app/components/block-list-table/block-list-table.component.css
@@ -2,6 +2,16 @@ table {
     width: 100%;
 }
 
+.quest-container {
+    margin: 20px;
+}
+
+.quest-list {
+    display: grid;
+    gap: 5px;
+    grid-template-columns: auto auto auto auto;
+}
+
 .table-container {
     margin: 20px;
 }
