--- a/src/app/components/block-list-table/block-list-table.component.html
+++ b/src/app/components/block-list-table/block-list-table.component.html
@@ -1,3 +1,24 @@
+<!-- Quests -->
+<mat-card appearance="outlined" class="quest-container">
+    <mat-card-content>
+        <div class="quest-list">
+            <mat-checkbox [checked]="allComplete"
+                        [indeterminate]="someComplete()"
+                        (change)="setAll($event.checked)"
+                        color="warn">
+            {{questList.name}}
+            </mat-checkbox>
+            @for (quest of questList.quests; track quest) {
+                <mat-checkbox [(ngModel)]="quest.completed"
+                                (ngModelChange)="updateAllComplete()"
+                                color="primary">
+                    {{quest.name}}
+                </mat-checkbox>
+            }
+        </div>
+    </mat-card-content>
+</mat-card>
+
 <div style="display: flex; margin-top: 20px;">
     <!-- Points display section -->
     <mat-card appearance="outlined" class="card-container">
@@ -17,8 +38,8 @@
             </mat-card-content>
         </mat-card>
     </mat-card>
-
-    <!-- Slayer and combat lvl add quests here also -->
+    
+    <!-- Slayer and combat lvl -->
     <mat-card appearance="outlined" class="card-container" [formGroup]="reqsForm">
         <mat-card-content>
             <mat-card appearance="outlined" class="reqs inner-card">
@@ -100,7 +121,7 @@
     
             <!-- Fruit Column -->
             <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Weighting </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
                 <td mat-cell *matCellDef="let row"> {{row.weight}} </td>
             </ng-container>
     
