--- a/src/app/views/bruh-guide/bruh-guide.component.html
+++ b/src/app/views/bruh-guide/bruh-guide.component.html
@@ -1,10 +1,36 @@
 <app-navbar></app-navbar>
 <h2>{{data.title}}</h2>
+
+<mat-accordion>
+    <mat-expansion-panel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title> {{data.title}} </mat-panel-title>
+        <mat-panel-description> This is a summary of the content </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>This is the primary content of the panel.</p>
+    </mat-expansion-panel>
+    <mat-expansion-panel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title> Self aware panel </mat-panel-title>
+        <mat-panel-description>
+          Currently I am 
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>I'm visible because I am open</p>
+    </mat-expansion-panel>
+</mat-accordion>
+
 @for (section of data.sections; track $index) {
-    <h3>{{section.subtitle}}</h3>
-    @for (step of section.steps; track $index) {
-        <mat-checkbox color="primary">
-            {{step}}
-        </mat-checkbox>
-    }
+    <mat-card appearance="outlined" class="container">
+        <mat-card-header>
+            <mat-card-title>{{section.subtitle}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+        @for (step of section.steps; track $index) {
+            <mat-checkbox color="primary">
+                {{step.step}}
+            </mat-checkbox>
+        }   
+        </mat-card-content>
+    </mat-card>
 }
