--- a/src/app/views/block-list/block-list.component.html
+++ b/src/app/views/block-list/block-list.component.html
@@ -1,15 +1,57 @@
 <app-navbar></app-navbar>
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" animationDuration="0ms">
-	<mat-tab label="Duradel">
-		<app-block-list-table [Tasks]="DuradelTasks" [averagePoints]="DuradelPoints"></app-block-list-table>
-	</mat-tab>
-	<mat-tab label="Konar">
-		<app-block-list-table [Tasks]="KonarTasks" [averagePoints]="KonarPoints"></app-block-list-table>
-	</mat-tab>
-	<mat-tab label="Nieve/Steve">
-		<app-block-list-table [Tasks]="NieveTasks" [averagePoints]="NievePoints"></app-block-list-table>
-	</mat-tab>
-	<mat-tab label="Chaeldar">
-		<app-block-list-table [Tasks]="ChaeldarTasks" [averagePoints]="ChaeldarPoints"></app-block-list-table>
-	</mat-tab>
-</mat-tab-group>
+
+
+<div class="tab-buttons">
+	@for (master of slayerMasters; track $index) {
+		<button class="tab-button" [class.active]="selectedTab === $index" (click)="selectedTab = $index">
+			{{ master.name }}
+		</button>
+	}
+</div>
+
+<app-account-settings 
+	(questsUpdated)="onQuestsUpdated($event)" 
+	(slayerLvlUpdated)="onSlayerUpdated($event)" 
+	(combatLvlUpdated)="onCombatUpdated($event)">
+</app-account-settings>
+
+<!-- Tab-specific content -->
+<!-- @if (selectedTab === 0) {
+	<app-block-list-table #blockListTable 
+		[Tasks]="DuradelTasks"
+		[averagePoints]="DuradelPoints"
+		[userCombatLvl]="combatLvl"
+		[userSlayerLvl]="slayerLvl"
+		[quests]="quests">
+	</app-block-list-table>
+}
+@if (selectedTab === 1) {
+	<app-block-list-table #blockListTable
+		[Tasks]="KonarTasks" 
+		[averagePoints]="KonarPoints"
+		[quests]="quests">
+	</app-block-list-table>
+}
+@if (selectedTab === 2) {
+	<app-block-list-table #blockListTable
+		[Tasks]="NieveTasks" 
+		[averagePoints]="NievePoints"
+		[quests]="quests">
+	</app-block-list-table>
+}
+@if (selectedTab === 3) {
+	<app-block-list-table #blockListTable
+		[Tasks]="ChaeldarTasks" 
+		[averagePoints]="ChaeldarPoints"
+		[quests]="quests">
+	</app-block-list-table>
+} -->
+
+
+<app-block-list-table #blockListTable 
+	[Tasks]="slayerMasters[selectedTab].tasks"
+	[averagePoints]="slayerMasters[selectedTab].points"
+	[userCombatLvl]="combatLvl"
+	[userSlayerLvl]="slayerLvl"
+	[quests]="quests">
+</app-block-list-table>
