--- a/src/app/components/account-settings/account-settings.component.css
+++ b/src/app/components/account-settings/account-settings.component.css
@@ -1,21 +1,54 @@
-.card-container {
-    justify-content: center;
-    margin: 20px;
-    flex: 1 1 auto;
-}
-
-.inner-card {
-    margin: 10px;
+.stats-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .quest-container {
     margin: 20px;
+    position: relative;
 }
 
 .quest-list {
     display: grid;
     gap: 5px;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    margin-top: 25px;
+}
+
+.unlock-all-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 8px 16px; /* Match padding of checkboxes */
+    font-size: 0.8rem;
+    color: gray;
+}
+
+/* deprecated */
+::ng-deep .unlock-all-container .mat-mdc-checkbox .mdc-form-field {
+    font-size: 0.8rem !important;
+    color: gray !important;
+}
+
+.card-container {
+    flex: 1 1 calc(50% - 40px);
+    margin: 20px;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.card-content-wrapper {
+    flex: 1; /* Takes up remaining space */
+    flex-direction: column;
+    justify-content: center; /* Centers content vertically */
+}
+
+.inner-card {
+    margin: 10px;
+    flex: 1 1 auto;
+    flex-direction: column;
+    justify-content: center; /* Centers content vertically */
 }
 
 .mat-mdc-slider {
