--- a/src/app/components/account-settings/account-settings.component.css
+++ b/src/app/components/account-settings/account-settings.component.css
@@ -62,3 +62,9 @@
     margin: 20px 10px 0;
     max-width: 280px;
 }
+
+.konar-options {
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+    gap: 10px; /* Add spacing */
+}
