--- a/src/app/components/account-settings/account-settings.component.html
+++ b/src/app/components/account-settings/account-settings.component.html
@@ -78,7 +78,7 @@
         </mat-card-header>
         <mat-card-content class="card-content-wrapper">
             <mat-card appearance="outlined" class="inner-card">
-                <mat-card-content style="display: flex; align-items: center; gap: 10px;">
+                <mat-card-content style="display: flex;">
                     <mat-form-field style="flex: 1 1 auto;">
                         <mat-select formControlName="term">
                             <mat-option value="short">short term</mat-option>
@@ -95,22 +95,22 @@
                     </mat-checkbox>
                 </mat-card-content>
             </mat-card>
-            <!-- <mat-card appearance="outlined" class="inner-card">
+            <mat-card appearance="outlined" class="inner-card" *ngIf="zoneName!='Kourend & Kebos'">
                 <mat-card-content class="konar-options">
-                    <mat-checkbox #useKonar formControlName='konarSwap' color="primary">Swapping to Konar for boosts</mat-checkbox>
-                    <div>
-                        <mat-checkbox [disabled]="!useKonar.checked" color="primary">Kourend elite diary</mat-checkbox>
-                        <mat-form-field appearance="outline">
-                            <mat-label>swap every</mat-label>
-                            <mat-select [disabled]="!useKonar.checked">
-                                <mat-option value="10">10</mat-option>
-                                <mat-option value="50">50</mat-option>
-                                <mat-option value="100">100</mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div>
+                    <mat-checkbox formControlName="kourendDiary" color="primary">Kourend elite diary</mat-checkbox>
+                    <mat-form-field style="flex: 1 1 auto;">
+                        <mat-label>Swapping to Konar every</mat-label>
+                        <mat-select formControlName="konarSwap">
+                            @if (pointsForm.get('konarSwap')?.value) {
+                                <mat-option>Clear</mat-option>
+                            }
+                            <mat-option value="10">10 tasks</mat-option>
+                            <mat-option value="50">50 tasks</mat-option>
+                            <mat-option value="100">100 tasks</mat-option>
+                        </mat-select>
+                    </mat-form-field>
                 </mat-card-content>
-            </mat-card> -->
+            </mat-card>
         </mat-card-content>
     </mat-card>
 </div>
