fix: explicitly define western provinces diary and kourend diary to avoid mixing

--- a/src/app/components/account-settings/account-settings.component.html
+++ b/src/app/components/account-settings/account-settings.component.html
@@ -102,16 +102,16 @@
                         </mat-form-field>
                     </mat-card-content>
                 </mat-card>
-                <mat-card appearance="outlined" class="inner-card" *ngIf="zoneName">
+                <mat-card appearance="outlined" class="inner-card" *ngIf="zoneName=='Western Provinces'">
                     <mat-card-content>
-                        <mat-checkbox formControlName='elite' color="primary">
+                        <mat-checkbox formControlName='WesternDiary' color="primary">
                             {{zoneName}} elite diary
                         </mat-checkbox>
                     </mat-card-content>
                 </mat-card>
-                <mat-card appearance="outlined" class="inner-card" *ngIf="zoneName!='Kourend & Kebos'">
+                <mat-card appearance="outlined" class="inner-card">
                     <mat-card-content class="konar-options">
-                        <mat-checkbox formControlName="kourendDiary" color="primary">Kourend elite diary</mat-checkbox>
+                        <mat-checkbox formControlName="kourendDiary" color="primary">Kourend & Kebos elite diary</mat-checkbox>
                         <mat-form-field style="flex: 1 1 auto;">
                             <mat-label>Swapping to Konar every</mat-label>
                             <mat-select formControlName="konarSwap">
