feat: add hint text

--- a/src/app/components/account-settings/account-settings.component.html
+++ b/src/app/components/account-settings/account-settings.component.html
@@ -1,6 +1,7 @@
 <mat-expansion-panel hideToggle style="margin: 20px;" expanded>
     <mat-expansion-panel-header>
         <mat-panel-title> Account Settings </mat-panel-title>
+        <mat-panel-description>Click here to close</mat-panel-description>
     </mat-expansion-panel-header>
     <!-- Fetch stats -->
     <mat-card appearance="outlined" style="margin: 0 20px;">
