--- a/src/app/views/block-list/block-list.component.html
+++ b/src/app/views/block-list/block-list.component.html
@@ -20,5 +20,6 @@
 	[Tasks]="selectedTasks"
 	[averagePoints]="averagePoints"
 	[userLevels]="levelsData"
-	[quests]="quests">
+	[quests]="quests"
+	[masterName]="selectedMasterName">
 </app-block-list-table>
